data-collector的代码实现
